refactor(provider): optimize schema registry provider
related-to: #498